--- a/UitgaveBeheer/Views/Expense/Overview.cshtml
+++ b/UitgaveBeheer/Views/Expense/Overview.cshtml
@@ -1,14 +1,19 @@
 ﻿
 @model OverviewViewModel
 
-@if (Model != null)
+
+
+
+
+<h4>Maand overzicht (@Model.Datum.ToString("MMMM-yyyy"))</h4>
+<div>
+    <a class="btn btn-primary" asp-area="" asp-controller="Expense" asp-action="Overview" asp-route-date="@Model.Datum.AddMonths(-1)">Vorige</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Expense" asp-action="Overview" asp-route-date="@Model.Datum.AddMonths(1)">Volgende</a>
+</div>
+
+@if (Model.BedragHoogst != 0)
 {
     <div class="monthSelect">
-        <h4>Maand overzicht (datum)</h4>
-        <div>
-            <a class="btn btn-primary">Vorige</a>
-            <a class="btn btn-primary">Volgende</a>
-        </div>
         <div>
             <div>
                 <h5>Hoogste uitgave</h5>
